--- a/test/spawn_test.ipynb
+++ b/test/spawn_test.ipynb
@@ -46,7 +46,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pexpect import pxssh\n",
+    "try:\n",
+    "    s = pxssh.pxssh()\n",
+    "    hostname = '175.25.18.136'\n",
+    "    username = 'admin'\n",
+    "    password = 'Skymoons&2013%crimoon@2015*!+&weiwubaQi'\n",
+    "    #cmd = \"ls -lh /etc/init.d/\\r\\n\"\n",
+    "    cmd = 'mysql -uroot -S /tmp/mysqlzz65.sock -e \"show databases;\"  2> /dev/null;echo $?'\n",
+    "    s.login(hostname, username, password, port=2009)\n",
+    "    s.sendline(cmd)\n",
+    "    s.prompt(timeout=600)\n",
+    "    output = s.before.split('\\r\\n')\n",
+    "    for i in output[1:len(output)-1]:\n",
+    "        if i == 0:\n",
+    "            slave_status = 'mysql -uroot -S /tmp/mysqlzz65.sock -e \"show slave status\\G\"'\n",
+    "            s.sendline(slave_status)\n",
+    "            s.prompt()\n",
+    "            print s.before\n",
+    "    s.logout()\n",
+    "except pxssh.ExceptionPxssh as e:\n",
+    "    print 'pxssh failed on login.'\n",
+    "    print e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -55,25 +87,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pxssh failed on login.\n",
-      "could not synchronize with original prompt\n"
+      "['        mysql -uroot -S /tmp/mysqlzz65.sock -e \"show databases;\" > /d \\rev/null 2>&1;[ $(echo $?) == 0 ] &&         mysql -uroot -S /tmp/mysqlzz65.sock  \\r-e \"show slave status\\\\G\" | grep \"Running\" | sed \"s/^ *//\" ||         mysql -uroo \\rt -S /tmp/mysqlzz65.sock -pdsdxfsh2013game65 -e \"show slave status\\\\G\" | grep \"Ru \\rnning\" | sed \"s/^ *//\"', 'Slave_IO_Running: Yes', 'Slave_SQL_Running: Yes', '']\n",
+      "Slave_IO_Running: Yes\n",
+      "Slave_SQL_Running: Yes\n"
      ]
     }
    ],
    "source": [
+    "# check MySQL slave status\n",
+    "# demo 1\n",
     "from pexpect import pxssh\n",
     "try:\n",
     "    s = pxssh.pxssh()\n",
-    "    hostname = '175.25.18.153'\n",
+    "    hostname = '175.25.18.136'\n",
     "    username = 'admin'\n",
     "    password = 'Skymoons&2013%crimoon@2015*!+&weiwubaQi'\n",
-    "    cmd = \"ls -lh /etc/init.d/\\r\\n\"\n",
-    "    \n",
+    "    #cmd = \"ls -lh /etc/init.d/\\r\\n\"\n",
+    "    cmd = '''\\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -e \"show databases;\" > /dev/null 2>&1;[ $(echo $?) == 0 ] && \\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -e \"show slave status\\G\" | grep \"Running\" | sed \"s/^ *//\" || \\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -p{1} -e \"show slave status\\G\" | grep \"Running\" | sed \"s/^ *//\"\n",
+    "        '''.format('65', 'dsdxfsh2013game65')\n",
     "    s.login(hostname, username, password, port=2009)\n",
     "    s.sendline(cmd)\n",
-    "    s.prompt()\n",
-    "    print s.before\n",
-    "    print \n",
+    "    s.prompt(timeout=60)\n",
+    "    output = s.before.split('\\r\\n')\n",
+    "    print output\n",
+    "    print output[1]\n",
+    "    print output[2]\n",
     "    s.logout()\n",
     "except pxssh.ExceptionPxssh as e:\n",
     "    print 'pxssh failed on login.'\n",
@@ -84,10 +125,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# check MySQL slave status\n",
+    "# demo 2\n",
+    "import sys \n",
+    "import getopt\n",
+    "import pexpect\n",
+    "from pexpect import pxssh\n",
+    "from sh import awk,sed,cat,tr,echo\n",
+    "\n",
+    "# active gameserver alias\n",
+    "active_alias = list(awk(awk('$14 ~ /^0$/ { print $0 }', 'zz_full.info'), '{print $1}'))\n",
+    "active_alias = map(lambda x: str(x.rstrip()), active_alias)\n",
+    "# active gameserver ip(public)\n",
+    "active_ip = list(awk(awk('$14 ~ /^0$/ { print $0 }', 'zz_full.info'), '{print $3}'))\n",
+    "active_ip = map(lambda x: str(x.rstrip()), active_ip)\n",
+    "# gameserver intranet ip\n",
+    "intra_ip = list(awk(awk('$14 ~ /^0$/ { print $0 }', 'zz_full.info'), '{print $3}'))\n",
+    "# mysql slave login passwd\n",
+    "sql_passwd = list(awk(awk('$14 ~ /^0$/ { print $0 }', 'zz_full.info'), '{print $10}'))\n",
+    "sql_passwd = map(lambda x: str(x.rstrip()), sql_passwd)\n",
+    "\n",
+    "number = map(lambda x:x.lstrip('z_'), active_alias)\n",
+    "alias_ip_passwd = dict(zip(active_alias, zip(number,active_ip, sql_passwd)))\n",
+    "alias_index = sorted(alias_ip_passwd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# check MySQL slave status\n",
+    "# demo 3\n",
+    "def single_gameserver(num, hostname, passwd):\n",
+    "    try:\n",
+    "        cmd = '''\\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -e \"show databases;\" > /dev/null 2>&1;[ $(echo $?) == 0 ] && \\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -e \"show slave status\\G\" | grep \"Running\" | sed \"s/^ *//\" || \\\n",
+    "        mysql -uroot -S /tmp/mysqlzz{0}.sock -p{1} -e \"show slave status\\G\" | grep \"Running\" | sed \"s/^ *//\"\n",
+    "        '''.format('65', 'dsdxfsh2013game65')\n",
+    "        \n",
+    "        s = pxssh.pxssh()\n",
+    "        s.login(hostname, username, password, port=2009)\n",
+    "        s.sendline(cmd)\n",
+    "        s.prompt(timeout=60)\n",
+    "        output = s.before.split('\\r\\n')\n",
+    "        print 'gameserver' + num\n",
+    "        print output[1]\n",
+    "        print output[2]\n",
+    "        s.logout()\n",
+    "    except pxssh.ExceptionPxssh as e:\n",
+    "        print 'pxssh failed on login.'\n",
+    "        print e"
+   ]
   }
  ],
  "metadata": {
