--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 # You can read me for some useful infomation.
 # Yes, you can read it.
+#
+# bash resource:
+# 	1.Advanced Bash-Scripting Guide(ABS/pdf)
+# 	2.http://www.grymoire.com/Unix/Sed.html#uh-0
+#
+#
