move tee command doc

--- a/bash/commands/file_manage/file_operation/linux_command_link.ipynb
+++ b/bash/commands/file_manage/file_operation/linux_command_link.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -103,20 +103,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 12\r\n",
-      "drwxrwxr-x. 17 liheyi liheyi 4096 Jun 30 00:01 anaconda2\r\n",
-      "drwxrwxr-x.  4 liheyi liheyi 4096 Jun 30 13:38 jupyter\r\n",
-      "-rw-rw-r--.  1 liheyi liheyi   22 Jun 30 14:34 link.txt\r\n"
+      "total 20\r\n",
+      "drwxrwxr-x 18 liheyi liheyi 4096  7月  5 19:13 anaconda2\r\n",
+      "-rw-r--r--  1 liheyi liheyi 8980  6月 12 17:41 examples.desktop\r\n",
+      "drwxrwxr-x  6 liheyi liheyi 4096  8月  4 13:02 jupyter\r\n"
      ]
     }
    ],
    "source": [
-    "ls -l ~"
+    "ls -l /home/liheyi/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -125,17 +125,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 16\r\n",
-      "2756596 drwxrwxr-x. 17 liheyi liheyi 4096 Jun 30 00:01 anaconda2\r\n",
-      "3027134 drwxrwxr-x.  4 liheyi liheyi 4096 Jun 30 13:38 jupyter\r\n",
-      "2758182 -rw-rw-r--.  2 liheyi liheyi   22 Jun 30 14:34 link_hard.txt\r\n",
-      "2758182 -rw-rw-r--.  2 liheyi liheyi   22 Jun 30 14:34 link.txt\r\n"
+      "total 32\r\n",
+      "1325310 drwxrwxr-x 18 liheyi liheyi 4096  7月  5 19:13 anaconda2\r\n",
+      " 927813 -rw-r--r--  2 liheyi liheyi 8980  6月 12 17:41 examples.desktop\r\n",
+      " 927813 -rw-r--r--  2 liheyi liheyi 8980  6月 12 17:41 examples.link\r\n",
+      "1191088 drwxrwxr-x  6 liheyi liheyi 4096  8月  4 13:02 jupyter\r\n"
      ]
     }
    ],
    "source": [
-    "link ~/link.txt ~/link_hard.txt\n",
-    "ls -li ~"
+    "# hard link\n",
+    "link /home/liheyi/examples.desktop /home/liheyi/examples.link\n",
+    "ls -li /home/liheyi/"
    ]
   }
  ],
