add new web site for learn

--- a/sites.ipynb
+++ b/sites.ipynb
@@ -193,6 +193,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###### 22.编程入门指南 v1.5\n",
+    "https://zhuanlan.zhihu.com/p/19959253"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 23.哈佛大学公开课：计算机科学cs50\n",
+    "http://open.163.com/special/opencourse/cs50.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
