--- a/programming/sicp/The_examples_exercises_of_1.3.ipynb
+++ b/programming/sicp/The_examples_exercises_of_1.3.ipynb
@@ -2371,7 +2371,7 @@
     "collapsed": true
    },
    "source": [
-    "$$f(x), f(f(x)), f(f(f(x))), \\ldots,$$"
+    "$$f(x),\\;\\;\\;f(f(x)),\\;\\;\\;f(f(f(x))),\\;\\;\\;\\ldots,$$"
    ]
   },
   {
@@ -3021,9 +3021,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3035,7 +3035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
